[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-games"
version = "0.1.0"
description = "A collection of Python games and utilities"
requires-python = ">= 3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
